# Aura-Text

./: .gitignore  .pre-commit-config.yaml  Aura Notes Main.py  Aura Notes.py  Aura-Text-setup-x64.iss  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Calculator.py  FUNDING.yml  LICENSE  LICENSE.md  LINTER_README.md  Manual.txt  ModuleFile.py  Quotes.py  README.md  README.src.md  SECURITY.md  SearchMod.py  Translate.py  UnitConv.py  aura-text  auratext.bat  auto_intend.txt  build.py  error_log.txt  install.py  interpreted_install.py  main.py  pyinstaller command.txt  pyproject.toml  requirements.txt  settingsNotes.py  synhig.txt
.github/: FUNDING.yml  README_DE  README_ES  README_HN.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: nrg.yml  python-app.yml
AuraText/data/: config.json  theme.json
AuraText/icons/: README.md
AuraText/plugins/: logs.py
LocalAppData/AuraText/data/: CPath_File.txt  commit.json  config.json  keybindings.json  shortcuts.json  terminal_history.txt  theme.json
LocalAppData/AuraText/icons/: README.md
LocalAppData/AuraText/plugins/: LaTeXTools.py  LiveServer.py  StrGenie.py  logs.py
Manual/: Manual.txt
Theme/: bf
auratext/: AT.py  Aura Text.py  AuraText.py  CodeEditor.py  Lexers.py  MenuConfig.py  ModuleFile.py  Modules.py  PluginDownload.py  Requirements.txt  SearchMod.py  Syntax_Highlighter.py  TabWidget.py  __init__.py  auratext.py  config_page.py  elements.db  main.py  plugin_interface.py  requirements.txt  terminal.py
auratext/Components/: About.py  CommandPalette.py  DBViewer.py  FunctionGrid.py  GitCommit.py  GitGraph.py  GitPush.py  GitRebase.py  LSP.py  Linter.py  NewProjectDialog.py  NonBlockingIO.py  Performance.py  PluginDetails.py  ProjectManager.py  RegexPlayground.py  TabWidget.py  ToDo.py  Toast.py  __init__.py  powershell.py  statusBar.py  terminal.py  titleBar.py
auratext/Components/BNLinters/: RustAnalyzer.py  __init__.py
auratext/Core/: ApplyTheme.py  AuraText.py  BreadcrumbBar.py  CommandPalette.py  Lexers.py  MenuConfig.py  MiniMapWidget.py  Modules.py  PluginDownload.py  TabWidget.py  ThemeDownload.py  WelcomeScreen.py  additional_prefs.py  autocomplete_engine.py  config_page.py  constants.py  modern_theme.qss  new_terminal.py  plugin_interface.py  powershell.py  pyconsole.py  shortcuts.py  svg_icon_manager.py  terminal.py  window.py
auratext/Data/: CPath_Project.txt  Dictionary.txt  config.json  theme.json
auratext/Misc/: WelcomeScreen.py  boilerplates.py  embeddedresources.py  file_templates.py  get_started.py  quirks.py  shortcuts.py
auratext/media/: icon_resources.py
auratext/scripts/: color_scheme_loader.py  def_path.py  file_cache.py  roman.py  shortcuts.py
translate/: README_DE.md  README_ES.md  README_FR.md  README_HN.md  README_JA.md  README_PT.md  README_RU.md  README_TA.md  README_ZH-CN.md
translate/ZH-CN/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README_ZH-CN.md  SECURITY.md
web/: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  README.md  docs.html  download.html  features.html  index.html
web/css/: style.css
web/docs/: index.html
web/images/: README.md
web/js/: main.js
wheels/: pyqtdarktheme-2.1.0-py3-none-any.whl
