[tool.poetry]
name = "aura-text"
version = "5.5.0"
description = "Aura Text is a versatile and powerful text editor powered by QScintilla that provides all the necessary tools for developers. It is build using PyQt6 and Python."
authors = ["Rohan Kishore (@rohankishore on GitHub)"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/rohankishore/Aura-Text"
homepage = "https://github.com/rohankishore/Aura-Text"
packages = [{ include = "auratext" }]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = ">=3.10"
art = "6.0"
autopep8 = "2.0.2"
gitpython = "3.1.49"
pyautogui = "0.9.54"
pyjokes = "0.6.0"
pyqt6 = "6.9.1"
pyqt6_sip = "13.10.2"
pyqt_find_replace_text_widget = "0.0.14"
pyqtconsole = "1.2.3"
pyttsx3 = "2.90"
pywinstyles = "1.3"
qt_material = "2.14"
requests = "2.33.0"
pyqtdarktheme = { path = "wheels/pyqtdarktheme-2.1.0-py3-none-any.whl" }
pyqt6-fluent-widgets = "1.6.0"
pyqt6-qscintilla = "2.14.1"
winshell = "0.6"
markdown = "3.8.2"
pyinstaller = "*"
pillow = "*"
pyperclip = "*"
psutil = "*"
pylint = "*"
pathspec = "*"
tk = "*"
tklinenums = "*"
pyspellchecker = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
